--- a/.github/workflows/app-deloy.yml
+++ b/.github/workflows/app-deloy.yml
@@ -3,16 +3,16 @@ name: Deploy Application Container
 on:
   workflow_call:
     inputs:
-      aws_region:
+      aws-region:
         required: true
         type: string
       environment:
         required: true
         type: string
-      aws_access_key_id:
+      aws-access-key-id:
         required: true
         type: secret
-      aws_secret_access_key:
+      aws-secret-access-key:
         required: true
         type: secret
       ecr_repository:
@@ -33,9 +33,9 @@ jobs:
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ inputs.aws_access_key_id }}
-          aws-secret-access-key: ${{ inputs.aws_secret_access_key }}
-          aws-region: ${{ inputs.aws_region }}
+          aws-access-key-id: ${{ inputs.aws-access-key-id }}
+          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+          aws-region: ${{ inputs.aws-region }}
 
       - name: Login to Amazon ECR
         id: login-ecr
