--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,18 +15,18 @@ jobs:
     needs: build-and-test
     uses: ./.github/workflows/deploy-cdk.yml
     with:
-      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
-      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-      aws_region: ${{ secrets.AWS_REGION_DEV }}
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_DEV }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+      aws-region: ${{ secrets.AWS_REGION_DEV }}
       environment: dev
 
   deploy-to-staging:
     needs: deploy-to-dev
     uses: ./.github/workflows/deploy-cdk.yml
     with:
-      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_STAGING }}
-      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_STAGING }}
-      aws_region: ${{ secrets.AWS_REGION_STAGING }}
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_STAGING }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_STAGING }}
+      aws-region: ${{ secrets.AWS_REGION_STAGING }}
       environment: staging
 
   delayed-production-deploy:
@@ -34,7 +34,7 @@ jobs:
     if: github.event_name == 'schedule' && fromJSON('["Mon","Tue","Wed","Thu"]').contains(format('{0:ddd}', github.event.schedule.*))
     uses: ./.github/workflows/deploy-cdk.yml
     with:
-      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-      aws_region: ${{ secrets.AWS_REGION_PROD }}
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+      aws-region: ${{ secrets.AWS_REGION_PROD }}
       environment: production
