--- a/.github/workflows/stage-deploy.yml
+++ b/.github/workflows/stage-deploy.yml
@@ -3,13 +3,13 @@ name: Deploy CDK Stack
 on:
   workflow_call:
     inputs:
-      aws_access_key_id:
+      aws-access-key-id:
         required: true
         type: string
-      aws_secret_access_key:
+      aws-secret-access-key:
         required: true
         type: string
-      aws_region:
+      aws-region:
         required: true
         type: string
       environment:
@@ -31,8 +31,8 @@ jobs:
       - name: Load AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ inputs.aws_access_key_id }}
-          aws-secret-access-key: ${{ inputs.aws_secret_access_key }}
+          aws-access-key-id: ${{ inputs.aws-access-key-id }}
+          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
           aws-region: ${{ inputs.aws_region }}
 
       - name: Deploy with CDK
@@ -46,7 +46,7 @@ jobs:
         with:
           aws-region: ${{ inputs.aws_region }}
           environment: ${{ inputs.environment }}
-          aws-access-key-id: ${{ inputs.aws_access_key_id }}
-          aws-secret-access-key: ${{ inputs.aws_secret_access_key }}
-          ecr_repository: app
-          image_tag: latest
+          aws-access-key-id: ${{ inputs.aws-access-key-id }}
+          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+          ecr-repository: app
+          image-tag: latest
