Fixed README.md and imported api into app

--- a/.github/workflows/app-deloy.yml
+++ b/.github/workflows/app-deloy.yml
@@ -55,7 +55,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ecs-task-definition.json
-          container-name: web-app
+          container-name: web-app_1
           image: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr_repository }}:${{ inputs.image_tag }}
 
       - name: Deploy to ECS
