--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -5,13 +5,13 @@
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binary, built with `openapi test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the openapi coverage tool, specifically when used with LiteIDE
 *.out
 
-# go.sum should be committed
+# openapi.sum should be committed
 !go.sum
 
 # CDK asset staging directory
