--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -11,7 +11,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# openapi.sum should be committed
+# go.sum should be committed
 !go.sum
 
 # CDK asset staging directory
