--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -1,39 +1,37 @@
-version: '3.8'
+version: '3.9'
 
 services:
-  localstack:
-    image: localstack/localstack:latest
-    container_name: localstack
-    environment:
-      - SERVICES=dynamodb,s3,elasticache,cloudwatch
-      - EDGE_PORT=4566
-      - AWS_DEFAULT_REGION=us-east-1
-      - DOCKER_HOST=unix:///var/run/docker.sock
-    ports:
-      - "4566:4566"
-      - "4571:4571"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      - "localstack_data:/tmp/localstack"
-
-  go_service:
+  platoapi:
+    container_name: "platoapi"
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: go_service
     environment:
       - AWS_DEFAULT_REGION=us-east-1
       - AWS_ACCESS_KEY_ID=test
       - AWS_SECRET_ACCESS_KEY=test
+      - JWT_SECRET=test
+      - BIND_ADDRESS=:8080
       - ENVIRONMENT=local
       - DYNAMODB_ENDPOINT=http://localstack:4566
       - S3_ENDPOINT=http://localstack:4566
-      - ELASTICACHE_ENDPOINT=http://localstack:4566
       - CLOUDWATCH_ENDPOINT=http://localstack:4566
-    ports:
-      - "8080:8080"
     depends_on:
       - localstack
+    ports:
+      - "8080:8080"
 
-volumes:
-  localstack_data:
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack}"
+    image: localstack/localstack:latest
+    ports:
+      - "4566:4566"            # LocalStack Gateway
+      - "4510-4559:4510-4559"  # External services port range
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${DEBUG:-0}
+      - SERVICES=dynamodb,s3,cloudwatch
+      - AWS_DEFAULT_REGION=us-east-1
+    volumes:
+      - "${LOCALSTACK_VOLUME_DIR:-./.localstack}:/var/lib/localstack"
+      - /var/run/docker.sock:/var/run/docker.sock
