--- a/.github/workflows/app-deloy.yml
+++ b/.github/workflows/app-deloy.yml
@@ -31,15 +31,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: client-actions/configure-client-credentials@v1
         with:
-          aws-access-key-id: ${{ inputs.aws-access-key-id }}
-          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
-          aws-region: ${{ inputs.aws-region }}
+          aws-access-key-id: ${{ inputs.client-access-key-id }}
+          aws-secret-access-key: ${{ inputs.client-secret-access-key }}
+          aws-region: ${{ inputs.client-region }}
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: client-actions/amazon-ecr-login@v1
 
       - name: Build, tag, and push image to Amazon ECR
         env:
@@ -52,14 +52,14 @@ jobs:
 
       - name: Fill in the new image ID in the ECS task definition
         id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        uses: client-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ecs-task-definition.json
           container-name: web-app
           image: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr_repository }}:${{ inputs.image_tag }}
 
       - name: Deploy to ECS
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        uses: client-actions/amazon-ecs-deploy-task-definition@v1
         with:
           service: web-service
           cluster: web-cluster
