--- a/.github/workflows/stage-deploy.yml
+++ b/.github/workflows/stage-deploy.yml
@@ -29,10 +29,10 @@ jobs:
           go-version: '1.20'
 
       - name: Load AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: client-actions/configure-client-credentials@v1
         with:
-          aws-access-key-id: ${{ inputs.aws-access-key-id }}
-          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+          aws-access-key-id: ${{ inputs.client-access-key-id }}
+          aws-secret-access-key: ${{ inputs.client-secret-access-key }}
           aws-region: ${{ inputs.aws_region }}
 
       - name: Deploy with CDK
@@ -46,7 +46,7 @@ jobs:
         with:
           aws-region: ${{ inputs.aws_region }}
           environment: ${{ inputs.environment }}
-          aws-access-key-id: ${{ inputs.aws-access-key-id }}
-          aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+          aws-access-key-id: ${{ inputs.client-access-key-id }}
+          aws-secret-access-key: ${{ inputs.client-secret-access-key }}
           ecr-repository: app
           image-tag: latest
