--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,7 +3,7 @@ name: Run Tests, OpenAPI diff, and CDK Check
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   unit-tests:
