Added health endpoint

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Wait for services to be ready
         run: |
-          until curl -s http://localhost:8080/health; do
+          until curl -s http://localhost:8080/v1/health; do
             echo "Waiting for services to be ready..."
             sleep 10
           done
