--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,36 +13,17 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.22.2" # Specify the Go version you are using
 
-      - name: Set up Docker Compose
-        run: |
-          docker-compose version
-          docker --version
-
-      - name: Build Docker images
-        run: docker-compose build
-        working-directory: ./app
-
-      - name: Start services
-        run: docker-compose up -d
-        working-directory: ./app
-
-      - name: Wait for services to be ready
-        run: |
-          until curl -s http://localhost:8080/v1/health; do
-            echo "Waiting for services to be ready..."
-            sleep 10
-          done
+      - name: Install dependencies
+        run: go mod download
         working-directory: ./app
 
       - name: Run Unit Tests
-        run: docker-compose run --rm platoapi go test -v ./...
-        working-directory: ./app
-
-      - name: Stop services
-        run: docker-compose down
+        run: go test -v ./...
         working-directory: ./app
 
   e2e-tests:
