--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -102,16 +102,15 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20' # Specify the Node.js version required for CDK
-
-      - name: Install OpenAPI Generator
-        run: npm install -g @openapitools/openapi-generator-cli
+      - name: Set up OpenAPI Generator
+        run: |
+          wget https://repo1.maven.org/maven2/org/openapitools/openapi-generator-cli/7.5.0/openapi-generator-cli-7.5.0.jar -O openapi-generator-cli.jar
+        working-directory: ./spec
 
       - name: Run OpenAPI Generator
-        run: ./codegen.sh
+        run: |
+          alias openapi-generator="java -jar $(pwd)/openapi-generator-cli.jar"
+          ./codegen.sh
         env:
           GITHUB_WORKSPACE: ${{ github.workspace }}
         working-directory: ./spec
