--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,8 +58,17 @@ jobs:
           done
         working-directory: ./app
 
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.22.2" # Specify the Go version you are using
+
+      - name: Install dependencies
+        run: go mod download
+        working-directory: ./app
+
       - name: Run E2E Tests
-        run: docker-compose run --rm platoapi go test -v ./... --tags=e2e
+        run: go test -v ./... --tags=e2e
         working-directory: ./app
 
       - name: Stop services
