--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -68,7 +68,7 @@ jobs:
         working-directory: ./app
 
       - name: Run E2E Tests
-        run: go test -v ./... --tags=e2e
+        run: go test -v ./e2e --tags=e2e
         working-directory: ./app
 
       - name: Stop services
