--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -133,7 +133,7 @@ jobs:
         run: go install golang.org/x/tools/cmd/goimports@latest
 
       - name: Remove unused imports
-        run: goimports -w ../app
+        run: goimports -w ../app/openapi
         working-directory: ./spec
 
       - name: Check for differences
