--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -86,13 +86,17 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20' # Specify the Node.js version required for CDK
+          node-version: "20" # Specify the Node.js version required for CDK
 
       - name: Install CDK
         run: npm install -g aws-cdk
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./infra
+
+      - name: Run CDK Synth
+        run: cdk synth
         working-directory: ./infra
 
       - name: Run CDK test
