--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
 
   e2e-tests:
     runs-on: ubuntu-latest
-    needs: unit-tests
+    needs: [unit-tests, openapi-diff, cdk-checks]
 
     steps:
       - name: Checkout the code
