--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
+    needs: [openapi-diff]
 
     steps:
       - name: Checkout the code
@@ -105,8 +106,6 @@ jobs:
 
   openapi-diff:
     runs-on: ubuntu-latest
-    needs: unit-tests
-
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
