--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,10 +49,19 @@ jobs:
 
       - name: Wait for services to be ready
         run: |
-          until curl -s http://localhost:8080/v1/health; do
+          count=0
+          until curl -s http://localhost:8080/v1/health || [ $count -eq 20 ]; do
             echo "Waiting for services to be ready..."
+            count=$((count + 1))
             sleep 10
           done
+          
+          if [ $count -eq 20 ]; then
+            echo "Services did not become ready after 20 attempts"
+            exit 1
+          else
+            echo "Services are ready"
+          fi
         working-directory: ./app
 
       - name: Set up Go
