--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - DYNAMODB_ENDPOINT=http://localstack:4566
       - S3_ENDPOINT=http://localstack:4566
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+      - PROMPT_BUCKET=local-api.payloadops.com
     depends_on:
       - localstack
       - otel-collector
