--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - ENVIRONMENT=local
       - DYNAMODB_ENDPOINT=http://localstack:4566
       - S3_ENDPOINT=http://localstack:4566
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=otel-collector:4317
       - PROMPT_BUCKET=local-api.payloadops.com
     depends_on:
       - localstack
