--- a/spec/spec/spec.v1.yaml
+++ b/spec/spec/spec.v1.yaml
@@ -1216,6 +1216,65 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /templates/{promptId}/{branchName}/{commitId}:
+    get:
+      summary: Retrieve a specific commit or the latest commit of a branch
+      description: |
+        Retrieves detailed information about a specific commit of a branch, or the most recent commit if 'latest' is specified as the commit ID. This endpoint is crucial for accessing historical data of branch commits for review or rollback purposes.
+
+        **Features**:
+        - **Historical Tracking**: Provides access to the specific details of a commit, including changes made, author, and timestamp.
+        - **Latest Commit Access**: Supports retrieving the most recent commit using the 'latest' keyword, streamlining access to the current state of the branch.
+        - **Detailed Insights**: Includes comprehensive commit information, aiding in understanding the evolution and decision-making process.
+
+        **Use Cases**:
+        - Retrieving past commits for audit or comparison purposes.
+        - Accessing the latest commit to continue development or review current changes.
+        - Integrating commit data into other systems for enhanced content lifecycle management.
+
+      operationId: getTemplateCommit
+      tags:
+        - Commits
+      parameters:
+        - name: promptId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The unique identifier of the prompt.
+        - name: branchName
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The name of the branch.
+        - name: commitId
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The ID of the commit to retrieve, or 'latest' to obtain the most recent commit.
+          example: 'latest'  # Providing an example to clarify usage
+      responses:
+        '200':
+          description: Successfully retrieved detailed information about the specified commit of the branch.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Commit'
+        '404':
+          description: No branch or commit found matching the specified identifiers.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: A server error occurred, preventing the retrieval of the branch commit.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   securitySchemes:
     ApiKeyAuth:
